Updated namesapce, project, sln

--- a/src/OrderIn.Api/Properties/launchSettings.json
+++ b/src/OrderIn.Api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "OrderIn.Api": {
+    "Micro.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
