--- a/src/OrderIn.Services.Items/appsettings.json
+++ b/src/OrderIn.Services.Items/appsettings.json
@@ -7,7 +7,7 @@
   "AllowedHosts": "*",
   "mongo": {
     "connectionString": "mongodb://localhost:27017",
-    "database": "orderin-items"
+    "database": "micro-items"
   },
   "rabbitmq": {
     "Username": "guest",
