--- a/src/OrderIn.Services.Worker/appsettings.json
+++ b/src/OrderIn.Services.Worker/appsettings.json
@@ -7,7 +7,7 @@
   "AllowedHosts": "*",
   "mongo": {
     "connectionString": "mongodb://localhost:27017",
-    "database": "orderin-cron-jobs"
+    "database": "micro-cron-jobs"
   },
   "rabbitmq": {
     "Username": "guest",
