--- a/src/OrderIn.Api/appsettings.json
+++ b/src/OrderIn.Api/appsettings.json
@@ -7,7 +7,7 @@
   "AllowedHosts": "*",
   "mongo": {
     "connectionString": "mongodb://localhost:27017",
-    "database": "orderin-storage"
+    "database": "micro-storage"
   },
   "rabbitmq": {
     "Username": "guest",
