--- a/src/OrderIn.Common/Micro.Common.csproj
+++ b/src/OrderIn.Common/Micro.Common.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Micro.Common</AssemblyName>
+    <RootNamespace>Micro.Common</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
