--- a/src/OrderIn.Services.Items/Micro.Services.Items.csproj
+++ b/src/OrderIn.Services.Items/Micro.Services.Items.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <AssemblyName>Micro.Services.Items</AssemblyName>
+    <RootNamespace>Micro.Services.Items</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,13 +13,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
-    <PackageReference Include="RawRabbit" Version="2.0.0-rc5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.8.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\orderin.common\OrderIn.Common.csproj" />
+    <ProjectReference Include="..\orderin.common\Micro.Common.csproj" />
   </ItemGroup>
 
 </Project>
