--- a/src/OrderIn.Services.Worker/Properties/launchSettings.json
+++ b/src/OrderIn.Services.Worker/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "OrderIn.Services.Worker": {
+    "Micro.Services.Worker": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
