--- a/src/Micro.Services.Items/Micro.Services.Items.csproj
+++ b/src/Micro.Services.Items/Micro.Services.Items.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\orderin.common\Micro.Common.csproj" />
+    <ProjectReference Include="..\Micro.Common\Micro.Common.csproj" />
   </ItemGroup>
 
 </Project>
